Fixed - options tab stays visible even when clicking outside of the corresponding button but inside the options tab; Added: sort system by due date is ascending order; Added: sort system reset to the default state

--- a/src/components/ArrangeButton.css
+++ b/src/components/ArrangeButton.css
@@ -7,12 +7,14 @@
     border-radius: 50%;
 }
 
-/* Icons - different changes might have to be done depending on the selected icon */
-.ArrangeButton>input:checked+.SortIcon svg {
+/* Icons - different changes might have to be done depending on the selected/hovered icon */
+.ArrangeButton>input:checked+.SortIcon svg,
+.ArrangeButton>input:hover+.SortIcon svg {
     stroke: var(--content-main);
 }
 
-.ArrangeButton>input:checked+.FilterIcon svg {
+.ArrangeButton>input:checked+.FilterIcon svg,
+.ArrangeButton>input:hover+.FilterIcon svg {
     fill: var(--content-main);
 }
 
